[Sultan / Srikanth] - Fixed optionsets aligning themselves and only three/row

--- a/page.css
+++ b/page.css
@@ -36,6 +36,9 @@ input.clean {
 .checkboxcontainer{
     margin-left: 5mm;
 }
+.optionsetTable td{
+        padding-right: 10mm;
+}
 @media print {
     .noprint{
         display:none;
